# OmniBoot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: arm-none-eabi.cmake
core/inc/: ymodem.h
core/src/: main.c  ymodem.c
